--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
 dependencies = [
-    "pylodstorage"
-]
+		# https://github.com/justpy-org/justpy
+        'justpy~=0.11.3',
+        # https://pypi.org/project/pylodstorage/
+        'pyLodStorage~=0.4.7',
+        # https://pypi.org/project/pyJustpyWidgets/
+        'pyJustpyWidgets~=0.1.3'
+     ]
