NLP Predictor WIP

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
         # https://pypi.org/project/py-3rdparty-mediawiki/
         'py-3rdparty-mediawiki~=0.7.1',
         # https://pypi.org/project/semanticscholar/
-        'semanticscholar~=0.3.0'
+        'semanticscholar~=0.3.0',
+        'requests_html~=0.10.0',
+        'bs4~=0.0.1'
      ]
 version = "0.1.0"
 
