--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
         # https://pypi.org/project/semanticscholar/
         'semanticscholar~=0.3.0',
         'requests_html~=0.10.0',
-        'bs4~=0.0.1'
+        'bs4~=0.0.1',
+        'plp~=0.0.2'
      ]
 version = "0.1.0"
 
