--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,24 @@
 name = "kglab_ws2022"
 dependencies = [
 		# https://github.com/justpy-org/justpy
-        'justpy~=0.11.3',
+        'justpy',
         # https://pypi.org/project/pylodstorage/
-        'pyLodStorage~=0.4.7',
+        'pyLodStorage',
         # https://pypi.org/project/habanero/
-        'habanero~=1.2.2',
+        'habanero',
         # https://pypi.org/project/pyJustpyWidgets/
-        'pyJustpyWidgets~=0.1.3',
+        'pyJustpyWidgets',
         # https://pypi.org/project/search-engine-parser/
-        'search-engine-parser~=0.6.8',
+        'search-engine-parser',
         # https://github.com/fake-useragent/fake-useragent
         'fake-useragent>=0.1.11',
         # https://pypi.org/project/py-3rdparty-mediawiki/
-        'py-3rdparty-mediawiki~=0.7.1',
+        'py-3rdparty-mediawiki',
         # https://pypi.org/project/semanticscholar/
-        'semanticscholar~=0.3.0',
-        'requests_html~=0.10.0',
-        'bs4~=0.0.1',
-        'pyLookupParser~=0.0.2'
+        'semanticscholar',
+        'requests_html',
+        'bs4',
+        'pyLookupParser'
      ]
 version = "0.1.0"
 
